# cocks-rs-old

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: abnormalities.rs  aesthetic.rs  balls.rs  circumcision.rs  cock_handler.rs  cock_struct.rs  curvature.rs  lib.rs  main.rs  shape.rs  size.rs  tier.rs  user.rs  veininess.rs
src/modules/: abnormalities.rs  aesthetic.rs  balls.rs  bin_functions.rs  circumcision.rs  cock_handler.rs  cock_struct.rs  curvature.rs  mod.rs  shape.rs  size.rs  tier.rs  traits.rs  user.rs  veininess.rs
src/modules/bin_modules/: mod.rs  standard_prompt.rs  tui_prompt.rs
src/modules/bin_modules/standard_prompt/: mod.rs
src/modules/bin_modules/tui_prompt/: draw.rs  mod.rs  theme.rs
