[package]
name = "cock-tier"
version = "0.2.1"
edition = "2021"
authors = ["turn"]
description = "Measure the power level of a peen."
readme = "README.md"
license = "MIT"
repository = "https://github.com/im-turn/penile-tier-evaluator"
keywords = ["anatomy", "tier-list", "evaluator", "cock"]
categories = ["command-line-utilities", "data-structures", ]
default-run = "cock-tier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
